@@ -14,7 +14,6 @@
 
 (* Emission of Sparc assembly code *)
 
-open Location
 open Misc
 open Cmm
 open Arch
