@@ -14,7 +14,6 @@
 
 (* Instruction selection for the Sparc processor *)
 
-open Misc
 open Cmm
 open Reg
 open Arch
