@@ -9,6 +9,7 @@ Bug fixes:
   third arguments
 - PR#5551: Avoid repeated lookups for missing cmi files
 - PR#5662: typo in md5.c
+- PR#5695: remove warnings on sparc code emitter
 
 Internals:
 - Moved debugger/envaux.ml to typing/envaux.ml to publish env_of_only_summary
